--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@victoryoalli/alpinejs-plugin-blueprint",
+  "name": "@victoryoalli/alpinejs-timeout",
   "version": "1.0.0",
-  "description": "Super alpine.js plugin",
-  "main": "dist/plugin.cjs.js",
-  "module": "dist/plugin.esm.js",
-  "unpkg": "dist/plugin.min.js",
+  "description": "A timeout directive alpine.js plugin ",
+  "main": "dist/timeout.cjs.js",
+  "module": "dist/timeout.esm.js",
+  "unpkg": "dist/timeout.min.js",
   "keywords": [],
   "author": "Victor Yoalli",
   "license": "MIT",
